--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server/index.js",
-    "build":"npm install && npm install --prefix client_ && npm run build --prefix client_" ,
+   "build": "npm install && npm run prisma:generate && npm install --prefix client_ && npm run build --prefix client_"
+ ,
     "start": "nodemon server/index.js"
     
   },
