--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dev": "nodemon server/index.js",
   "build": "npm install && npm install --prefix client_ && npm run build --prefix client_",
   "start": "nodemon server/index.js",
-  "postinstall": "prisma generate"
+  "postinstall": "npm install prisma && prisma generate"
 },
   "keywords": [],
   "author": "",
